# tnl-intelligence

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gateway  LICENSE  README.md  SECURITY.md  compose.yaml  package-lock.json  package.json  server.json  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-container.yml  release-mcp.yml  release-n8n.yml  release-npm.yml  release-python.yml  verify-container.yml
adapters/: adapter-manifest.json
connectors/: connector-manifest.json
deploy/gateway/: config.example.yaml  deployment.yaml
deploy/research/: config.example.yaml
deploy/webhooks/: config.example.yaml
distribution/: mcp-server.json
distribution/release/: compatibility-matrix.json
distribution/schema/: mcp-distribution.schema.json
docs/: ai-client-adapters.md  architecture.md  automation-connectors.md  configuration.md  daemon.md  distribution-and-product-expansion.md  gateway-operations.md  publishing.md  quant-research-toolkit.md  research-operations.md  webhook-operations.md
docs/developer/: concepts.md  credential-operations.md  errors-and-quotas.md  index.md  quick-starts.md  security-and-support.md
docs/planning/: n8n-manual-review-demo-plan.md  n8n-manual-review-demo-progress.md  n8n-manual-review-demo-runbook.md  openai-plugin-demo-recording-runbook.md  openai-plugin-submission-progress.md  tnl-distribution-publication-audit-plan.md  tnl-distribution-publication-audit-progress.md  tnl-distribution-tools-build-plan.md  tnl-distribution-tools-build-progress.md  tnl-github-ghcr-release-plan.md  tnl-github-ghcr-release-progress.md  tnl-intelligence-build-plan.md  tnl-intelligence-build-progress.md  tnl-live-service-release-validation-plan.md  tnl-npm-publication-plan.md  (+4 more)
integrations/: compatibility.json
openapi/: tnl.openapi.json
python/tnl_intelligence/: README.md  pyproject.toml
python/tnl_intelligence/src/tnl_intelligence/: __init__.py  client.py  errors.py  models.py  webhooks.py  webhooks_generated.py
python/tnl_intelligence/src/tnl_intelligence/quant/: __init__.py  adapters.py  asset_builder.py  benchmark.py  cli.py  errors.py  event_study.py  examples.py  features.py  lake.py  models.py  notebook_runner.py  sample.py  storage.py  temporal.py  validation.py
python/tnl_intelligence/src/tnl_intelligence/quant/example_assets/: __init__.py
python/tnl_intelligence/src/tnl_intelligence/quant/example_assets/data/: LICENSE.md  mappings.json  observations.jsonl  outcomes.json  provenance.json  sessions.json
python/tnl_intelligence/src/tnl_intelligence/quant/example_assets/notebooks/: 01-point-in-time.ipynb  02-event-study.ipynb  03-entity-exposure.ipynb  04-weekly-consequence.ipynb
python/tnl_intelligence/tests/: test_client.py  test_webhooks.py
python/tnl_intelligence/tests/quant/: test_adapters_cli.py  test_event_study.py  test_examples_notebooks.py  test_lake.py  test_optional_engines.py  test_performance.py  test_temporal_models.py  test_validation_features.py
scripts/: adapter-assets.mjs  check-package-tarballs.mjs  connector-assets.mjs  distribution-assets.mjs  finalize-distribution-container-evidence.mjs  onboarding-assets.mjs  openapi.mjs  pack-adapters.mjs  pack-connectors.mjs  pack-distribution.mjs  prepare-release-artifacts.mjs  release-candidate-assets.mjs  release-lib.mjs  research-assets.mjs  run-adapter-qualification.mjs  run-capacity-chaos.mjs  run-connector-qualification.mjs  run-cross-tool-scenarios.mjs  run-distribution-container-qualification.sh  run-distribution-qualification.mjs  run-integration-harness.mjs  run-onboarding-qualification.mjs  run-quant-qualification.mjs  run-release-qualification.mjs  run-research-qualification.mjs  run-rollback-rehearsal.mjs  run-webhook-qualification.mjs  webhook-assets.mjs
(+156 files in other folders)
